# RsWebQucStar

./: .env  .env_dev  Cargo.toml  README.md  base_table.sql  diesel.toml  env_dev.env  env_prod.env  env_test.env  libpq.lib  run_dev.sh  run_prod.sh
axum-login/: Cargo.toml
axum-login/src/: session.rs
derive_macro/derive_builder/examples/: channel.rs  custom_constructor.rs  custom_defaults.rs  custom_error.rs  custom_error_generic.rs  deny_missing_docs.rs  doc_example.rs  readme_example.rs  validation.rs
derive_macro/derive_builder/src/: lib.rs
derive_macro/derive_builder/tests/: bounds_generation.rs  build_fn.rs  builder_field_custom.rs  builder_name.rs  custom_constructor.rs  custom_default.rs  derive_trait.rs  forward_allow_attr.rs  forward_serde_attrs.rs  generic_structs.rs  lifetime.rs  (+12 more)
derive_macro/derive_builder_core/: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-08-02-095409_update_order/: down.sql  up.sql
migrations/2024-08-05-075813_update_order/: down.sql  up.sql
migrations/2024-08-05-084017_update_order/: down.sql  up.sql
migrations/2024-08-07-081835_update_order/: up.sql
migrations/2024-08-09-014516_add_enum/: up.sql
migrations/2024-08-09-015622_add_enum/: up.sql
migrations/2024-08-10-084627_addr_subsribe/: down.sql  up.sql
migrations/2024-08-10-091034_addr_subsribe/: down.sql  up.sql
migrations/2024-08-12-060500_addr_subsribe/: down.sql  up.sql
migrations/2024-08-16-013142_create_table/: down.sql  up.sql
migrations/2024-10-09-073215_create_auth/: down.sql  up.sql
migrations/2024-10-10-094638_create_auction/: down.sql  up.sql
migrations/2024-10-11-013241_update_auction/: down.sql  up.sql
src/: README.md  docs.rs  extractors.rs  lib.rs  main.rs  models-bak.rs  models.rs  schema.rs  state.rs  tg_user.rs  trading_order.rs
src/api_auth/: login_impl.rs  mod.rs  router.rs
src/api_doc/: docs.rs  errors.rs  extractors.rs  mod.rs
src/apis/: dex_aggr.rs  dex_aggr_resp.rs  mod.rs  uni_graph_params.rs
src/contract/: erc20.rs  mod.rs  pre_sale_slot.json  pre_sale_slot.rs  uni_factory.rs  uni_graph.rs  uni_graph_params.rs  uni_pair.rs  uni_router2.rs  usdt.rs
src/contracts/: erc20.rs  mod.rs  uni_factory.rs  uni_pair.rs  uni_router2.rs  usdt.rs
src/controller/: analysis.rs  auction.rs  builder.rs  group.rs  group_permission.rs  mod.rs  permission.rs  tg_user.rs  trading_order.rs  user.rs
src/domain/: following_order.rs  mod.rs  models.rs  param_models.rs  tg_user.rs
src/openapi/: docs.rs  errors.rs  extractors.rs  mod.rs
src/task/: mod.rs
(+14 files in other folders)
