[package]
name = "smart_wallet_following"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5",features = ["macros"] }
axum-extra = "0.9.3"
axum-jsonschema = { version = "0.8.0" ,features = ["aide"]}
axum-macros = "0.4.1"

aide = { version = "0.13.4", features = ["redoc", "scalar", "axum", "axum-extra", "macros", ] }

diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }

dotenvy = "0.15.7"

serde = { version = "1.0.204", features = ["derive" , "rc"] }
serde_json = "1.0.121"

tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = "0.3.18"
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
chrono = { version = "0.4.15", features = ["serde"] }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
alloy-primitives = { version = "0.7.7", features = ["serde", "postgres"] }
schemars = { version = "0.8.21" ,features = ["uuid1"]}
uuid = { version = "1.10.0", features = ["serde", "v4"]}

